KeePassDX(2.9)
 * Upgrade to Android API 30 #723
 * Save new credentials with Autofill #524
 * Setting to close database after Autofill selection #755
 * Fix biometric issues #724 #740 #731
 * Fix autofill #725 #551
 * Small fixes and translations #732 #736 #737 #738 #742

KeePassDX(2.8.7)
 * Downgrade to Android API 29 (crash on startup with API 30 on some devices)
 Sorry for the inconvenience

KeePassDX(2.8.6)
 * Fix Autofill recognition #712
 * Keep value after renaming custom field #709
 * Prevent random binary bug #713
 * Fix dialog background #717
 * Better domain recognition for autofill #702
 * Write custom data #651
 * Fix autolink #720

KeePassDX(2.8.5)
 * Fix Base 64 #708

KeePassDX(2.8.4)
 * Fix incomplete attachment deletion #684
 * Fix opening database v1 without backup folder #692
 * Fix ANR during first entry education #685
 * Entry edition as fragment and manual views to fix focus #686
 * Fix opening database with corrupted attachment #691
 * Manage empty keyfile #679

KeePassDX(2.8.3)
 * Upload attachments
 * Visibility button for each hidden field
 * Fix read header file
 * Fix deletion in KDB database
 * Fix minor issues

KeePassDX(2.8.2)
 * Fix themes / new UI
 * Fix multiples notifications
 * Fix entry in Magikeyboard memory
 * Fix biometric view visibility
 * Fix fields order
 * Upgrade code with ViewModel and LiveData

KeePassDX(2.8.1)
 * Capture exceptions in coroutines

KeePassDX(2.8)
 * Fix TOTP period (> 60s)
 * Fix searching in recycle bin
 * Settings to back to the previous keyboard during database credentials and after form filling
 * Improve action tasks
 * Improve recognition to reset app timeout
 * Fix minor issues

KeePassDX(2.7)
 * Add blocklists for autofill
 * Add autofill compatibility mode (usefull for Browser not compatible)
 * Upgrade autofill recognition algorithm
 * Setting to search through web subdomains
 * Refactoring selection mode

KeePassDX(2.6)
 * Share a web domain to automatically search for an entry