@@ -117,18 +117,18 @@
     <string name="settings_autofill_enable_key" translatable="false">settings_autofill_enable_key</string>
     <bool name="settings_autofill_enable_default" translatable="false">false</bool>
     <string name="settings_autofill_key" translatable="false">settings_autofill_key</string>
-    <string name="keyboard_selection_entry_key" translatable="false">keyboard_selection_entry_key</string>
-    <bool name="keyboard_selection_entry_default" translatable="false">false</bool>
     <string name="keyboard_notification_entry_key" translatable="false">keyboard_notification_entry_key</string>
     <bool name="keyboard_notification_entry_default" translatable="false">true</bool>
-    <string name="keyboard_search_share_key" translatable="false">keyboard_search_share_key</string>
-    <bool name="keyboard_search_share_default" translatable="false">false</bool>
-    <string name="keyboard_save_search_info_key" translatable="false">keyboard_save_search_info_key</string>
-    <bool name="keyboard_save_search_info_default" translatable="false">true</bool>
     <string name="keyboard_notification_entry_clear_close_key" translatable="false">keyboard_notification_entry_clear_close_key</string>
     <bool name="keyboard_notification_entry_clear_close_default" translatable="false">true</bool>
     <string name="keyboard_entry_timeout_key" translatable="false">keyboard_entry_timeout_key</string>
     <string name="keyboard_entry_timeout_default" translatable="false">300000</string>
+    <string name="keyboard_selection_entry_key" translatable="false">keyboard_selection_entry_key</string>
+    <bool name="keyboard_selection_entry_default" translatable="false">false</bool>
+    <string name="keyboard_search_share_key" translatable="false">keyboard_search_share_key</string>
+    <bool name="keyboard_search_share_default" translatable="false">false</bool>
+    <string name="keyboard_save_search_info_key" translatable="false">keyboard_save_search_info_key</string>
+    <bool name="keyboard_save_search_info_default" translatable="false">true</bool>
     <string name="keyboard_auto_go_action_key" translatable="false">keyboard_auto_go_action_key</string>
     <bool name="keyboard_auto_go_action_default" translatable="false">true</bool>
     <string name="keyboard_key_vibrate_key" translatable="false">keyboard_key_vibrate_key</string>
@@ -139,7 +139,9 @@
     <bool name="keyboard_previous_database_credentials_default" translatable="false">false</bool>
     <string name="keyboard_previous_fill_in_key" translatable="false">keyboard_previous_fill_in_key</string>
     <bool name="keyboard_previous_fill_in_default" translatable="false">false</bool>
-        <string name="autofill_close_database_key" translatable="false">autofill_close_database_key</string>
+    <string name="keyboard_previous_lock_key" translatable="false">keyboard_previous_lock_key</string>
+    <bool name="keyboard_previous_lock_default" translatable="false">true</bool>
+    <string name="autofill_close_database_key" translatable="false">autofill_close_database_key</string>
     <bool name="autofill_close_database_default" translatable="false">false</bool>
     <string name="autofill_auto_search_key" translatable="false">autofill_auto_search_key</string>
     <bool name="autofill_auto_search_default" translatable="false">true</bool>
